syntax = "proto3";

package WoodflowCi.sawmill;

import "ci/tasklet/registry/demov2/woodflow/common/proto/woodflow.proto";
import "ci/tasklet/common/proto/service.proto";

message Input {
    repeated Timber timbers = 1;
    SawmillDocument document = 2;

    ci.TaskletContext context = 3;
}

message SawmillDocument {
    string title = 1; // имя лесопилки
    int32 boards_per_timber = 2;
}

message Output {
    repeated Board boards = 1;
}
